<resources>
    <string name="app_name">Win7Calculator</string>
    <string name="calculator_menu_view_item_text">Вид</string>
    <string name="calculator_menu_edit_item_text">Правка</string>
    <string name="calculator_menu_help_item_text">Справка</string>

    <!-- General -->
    <string name="calculator_display_memory_sign">M</string>
    <string name="mc_button_text">MC</string>
    <string name="mr_button_text">MR</string>
    <string name="ms_button_text">MS</string>
    <string name="m_plus_button_text">M+</string>
    <string name="m_minus_button_text">M-</string>
    <string name="ce_button_text">CE</string>
    <string name="c_button_text">C</string>
    <string name="plus_minus_button_text">+-</string>
    <string name="sqrt__button_text">v</string>
    <string name="seven_button_text">7</string>
    <string name="eight_button_text">8</string>
    <string name="nine_button_text">9</string>
    <string name="divide_button_text">/</string>
    <string name="percent_button_text">%</string>
    <string name="four_button_text">4</string>
    <string name="five_button_text">5</string>
    <string name="six_button_text">6</string>
    <string name="multiply_button_text">*</string>
    <string name="inverse_ratio_button_text">1/x</string>
    <string name="one_button_text">1</string>
    <string name="two_button_text">2</string>
    <string name="three_button_text">3</string>
    <string name="minus_button_text">-</string>
    <string name="equal_button_text">=</string>
    <string name="zero_button_text">0</string>
    <string name="comma_button_text">,</string>
    <string name="plus_button_text">+</string>

    <!-- Scientific -->
    <string name="blank_button_text"> </string>
    <string name="inv_button_text">Inv</string>
    <string name="ln_button_text">ln</string>
    <string name="left_bracket_button_text">(</string>
    <string name="right_bracket_button_text">)</string>
    <string name="int_button_text">Int</string>
    <string name="sinh_button_text">sinh</string>
    <string name="sin_button_text">sin</string>
    <string name="x_squared_button_text">x2</string>
    <string name="n_factorial_button_text">n!</string>
    <string name="dms_button_text">dms</string>
    <string name="cosh_button_text">cosh</string>
    <string name="cos_button_text">cos</string>
    <string name="x_to_power_y_button_text">xy</string>
    <string name="y_root_of_x_button_text">yvx</string>
    <string name="pi_button_text">Pi</string>
    <string name="tanh_button_text">tanh</string>
    <string name="tan_button_text">tan</string>
    <string name="x_to_power_three_button_text">x3</string>
    <string name="third_root_button_text">vx</string>
    <string name="fixed_to_exponent_button_text">F-E</string>
    <string name="exponent_button_text">Exp</string>
    <string name="modulus_button_text">Mod</string>
    <string name="log_button_text">log</string>
    <string name="ten_to_the_power_of_x_button_text">10x</string>

    <string name="divide_on_zero_error_text">Деление на ноль невозможно</string>
    <string name="invalid_input_error_text">Недопустимый ввод</string>
    <string name="unknown_error_text">Неизвестная ошибка</string>

    <string name="menu_item_general_calculator_text">Обычный</string>
    <string name="menu_item_scientific_calculator_text">Инженерный</string>
    <string name="menu_item_programmer_calculator_text">Программист</string>
    <string name="menu_item_statistic_calculator_text">Статистика</string>
    <string name="menu_item_digit_grouping_text">Группировка цифр</string>
    <string name="menu_item_unit_conversion_text">Преобразование единиц</string>
    <string name="menu_item_date_calculation_text">Вычисление даты</string>
    <string name="menu_item_sheets_text">Листы</string>
    <string name="menu_item_mortgage_calculation_text">Ипотека</string>
    <string name="menu_item_autoleasing_text">Автолизинг</string>
    <string name="menu_item_fuel_economy_gallons_text">Экон. топлива(миль/гал)</string>
    <string name="menu_item_fuel_economy_litres_text">Экон. топлива(л/100 км)</string>
    <string name="menu_item_copy_text">Копировать</string>
    <string name="menu_item_paste_text">Вставить</string>
    <string name="menu_item_read_help_text">Посмотреть справку</string>
    <string name="menu_item_about_app_text">О программе</string>

    <string name="activity_not_implement_controller_interface_exception_text">Activity должна реализовывать интерфейс Controller</string>
</resources>